upadte homepage url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://shinchancode.github.io/3d-react-portfolio",
+  "homepage": "https://Shourya-Sinha.github.io/Shourya_sinha_3d_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
